--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}Блог{% endblock %}
+
+{% block content %}
+<div class="row justify-content-center">
+    <div class="col-md-8">
+        <div class="card border-info">
+            <div class="card-header bg-info text-white">Добро пожаловать в блог!</div>
+            <div class="card-body">
+                <h5 class="card-title">Интересные статьи и новости</h5>
+                <p class="card-text">Здесь мы публикуем интересные статьи и последние новости.</p>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
