--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}Главная страница{% endblock %}
+
+{% block content %}
+<div class="text-center">
+    <div class="card border-primary mx-auto" style="max-width: 30rem;">
+        <div class="card-header bg-primary text-white">Текущая дата и время</div>
+        <div class="card-body">
+            <h5 class="card-title">{{ date_time }}</h5>
+        </div>
+    </div>
+</div>
+{% endblock %}
