--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,8 @@
     <!-- Подключение Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQXK1xIjWoKUIE3IiNAzLkXopijAZRiZBGEv4Sx" crossorigin="anonymous">
     <!-- Собственные стили -->
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+
 </head>
 <body>
     <!-- Шапка -->
