--- a/templates/index.html
+++ b/templates/index.html
@@ -12,3 +12,20 @@
     </div>
 </div>
 {% endblock %}
+
+
+<div class="card border-primary mb-3" style="max-width: 40rem; margin: auto;">
+    <div class="card-header">Текущая дата и время</div>
+    <div class="card-body">
+        <h4 class="card-title">{{ date_time }}</h4>
+    </div>
+</div>
+
+
+<div class="card mb-3" style="max-width: 40rem; margin: auto;">
+    <div class="card-header custom-card-header">Текущая дата и время</div>
+    <div class="card-body">
+        <h4 class="card-title">{{ date_time }}</h4>
+    </div>
+</div>
+
